--- a/conf/front.yaml
+++ b/conf/front.yaml
@@ -6,12 +6,15 @@ xchainServer:
   port: :17101
   # front证书地址
   tlsPath: ./data/cert
+  # gRPC maxMessageSize ,默认1073741824(1G)
+  maxMessageSize: 1073741824
+
 
 # 数据库配置 ./data/db/ca.db
 dbConfig:
   dbType: sqlite3
   #dbType: mysql
-  dbPath: /tmp/ca.db
+  dbPath: ./tmp/ca.db
   mysqlDbUser: root
   mysqlDbPwd: 123456
   mysqlDbHost: 10.99.196.224
